Fixed button wrap

--- a/output.css
+++ b/output.css
@@ -561,10 +561,6 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
 .mr-4 {
   margin-right: 1rem;
 }
